artifacts/macos-x86_64-artifact/dojo.h

struct Transaction;
struct TransactionCall;
struct Struct;
typedef enum CallType {
  Execute,
  ExecuteFromOutside,
} CallType;
typedef enum PaginationDirection {
  Forward,
  Backward,
} PaginationDirection;
typedef struct FieldElement {
  uint8_t data[32];
} FieldElement;
typedef struct CArrayFieldElement {
  struct FieldElement *data;
  uintptr_t data_len;
} CArrayFieldElement;
typedef struct COptionc_char {
  COptionc_char_Tag tag;
  union {
    struct {
      const char *some;
    };
  };
} COptionc_char;
typedef struct COptionu32 {
  COptionu32_Tag tag;
  union {
    struct {
      uint32_t some;
    };
  };
} COptionu32;
typedef struct CArrayOrderBy {
  struct OrderBy *data;
  uintptr_t data_len;
} CArrayOrderBy;
typedef struct Pagination {
  struct COptionc_char cursor;
  struct COptionu32 limit;
  enum PaginationDirection direction;
  struct CArrayOrderBy order_by;
} Pagination;
typedef struct CArrayc_char {
  const char **data;
  uintptr_t data_len;
} CArrayc_char;
typedef struct U256 {
  uint8_t data[32];
} U256;
typedef struct COptionu64 {
  COptionu64_Tag tag;
  union {
    struct {
      uint64_t some;
    };
  };
} COptionu64;
typedef struct TransactionFilter {
  struct CArrayFieldElement transaction_hashes;
  struct CArrayFieldElement caller_addresses;
  struct CArrayFieldElement contract_addresses;
  struct CArrayc_char entrypoints;
  struct CArrayFieldElement model_selectors;
  struct COptionu64 from_block;
  struct COptionu64 to_block;
} TransactionFilter;
typedef struct CArrayTransactionCall {
  struct TransactionCall *data;
  uintptr_t data_len;
} CArrayTransactionCall;
typedef struct Transaction {
  struct FieldElement transaction_hash;
  struct FieldElement sender_address;
  struct CArrayFieldElement calldata;
  struct FieldElement max_fee;
  struct CArrayFieldElement signature;
  struct FieldElement nonce;
  uint64_t block_number;
  const char *transaction_type;
  uint64_t block_timestamp;
  struct CArrayTransactionCall calls;
  struct CArrayFieldElement unique_models;
} Transaction;
typedef struct CArrayU256 {
  struct U256 *data;
  uintptr_t data_len;
} CArrayU256;
typedef struct TokenQuery {
  struct CArrayFieldElement contract_addresses;
  struct CArrayU256 token_ids;
  struct Pagination pagination;
} TokenQuery;
typedef struct CArrayMember {
  struct Member *data;
  uintptr_t data_len;
} CArrayMember;
typedef struct Struct {
  const char *name;
  struct CArrayMember children;
} Struct;
typedef struct TransactionCall {
  struct FieldElement contract_address;
  const char *entrypoint;
  struct CArrayFieldElement calldata;
  enum CallType call_type;
  struct FieldElement caller_address;
} TransactionCall;