Assets/Dojo/Runtime/Bindings/dojo.gen.cs


                set
                {

                    _contract_types = new CArrayContractType();
                    _contract_types.data_len = (UIntPtr)value.Length;
                    fixed (ContractType* ptr = value)
                    {
                        _contract_types.data = ptr;
                    }
                }
            }

            [FieldOffset(32)] // size = 48
            public Pagination pagination;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 96, Pack = 8)]
        public struct TokenQuery
        {
            [FieldOffset(0)] // size = 16
            public CArrayFieldElement _contract_addresses;

            public Span<FieldElement> contract_addresses
            {
                get
                {
                    fixed (TokenQuery* @this = &this)
                    {
                        var span = new Span<FieldElement>(@this->_contract_addresses.data, (int)@this->_contract_addresses.data_len);
                        return span;
                    }
                }

                set
                {

                    _contract_addresses = new CArrayFieldElement();
                    _contract_addresses.data_len = (UIntPtr)value.Length;
                    fixed (FieldElement* ptr = value)
                    {
                        _contract_addresses.data = ptr;
                    }
                }
            }

            [FieldOffset(16)] // size = 16
            public CArrayU256 _token_ids;

            public Span<U256> token_ids
            {
                get
                {
                    fixed (TokenQuery* @this = &this)
                    {
                        var span = new Span<U256>(@this->_token_ids.data, (int)@this->_token_ids.data_len);
                        return span;
                    }
                }

                set
                {

                    _token_ids = new CArrayU256();
                    _token_ids.data_len = (UIntPtr)value.Length;
                    fixed (U256* ptr = value)
                    {
                        _token_ids.data = ptr;
                    }
                }
            }

            [FieldOffset(32)] // size = 16
            public CArrayAttributeFilter _attribute_filters;

            public Span<AttributeFilter> attribute_filters
            {
                get
                {
                    fixed (TokenQuery* @this = &this)
                    {
                        var span = new Span<AttributeFilter>(@this->_attribute_filters.data, (int)@this->_attribute_filters.data_len);
                        return span;
                    }
                }

                set
                {

                    _attribute_filters = new CArrayAttributeFilter();
                    _attribute_filters.data_len = (UIntPtr)value.Length;
                    fixed (AttributeFilter* ptr = value)
                    {
                        _attribute_filters.data = ptr;
                    }
                }
            }

            [FieldOffset(48)] // size = 48
            public Pagination pagination;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 216, Pack = 8)]
        public struct Transaction
        {
            [FieldOffset(0)] // size = 32
            public FieldElement transaction_hash;

            [FieldOffset(32)] // size = 32
            public FieldElement sender_address;

            [FieldOffset(64)] // size = 16
            public CArrayFieldElement _calldata;

            public Span<FieldElement> calldata
            {
                get
                {
                    fixed (Transaction* @this = &this)
                    {
                        var span = new Span<FieldElement>(@this->_calldata.data, (int)@this->_calldata.data_len);
                        return span;
                    }
                }

                set
                {

                    _calldata = new CArrayFieldElement();
                    _calldata.data_len = (UIntPtr)value.Length;
                    fixed (FieldElement* ptr = value)
                    {
                        _calldata.data = ptr;
                    }
                }
            }

            [FieldOffset(80)] // size = 32
            public FieldElement max_fee;

            [FieldOffset(112)] // size = 16
            public CArrayFieldElement _signature;

            public Span<FieldElement> signature
            {
                get
                {
                    fixed (Transaction* @this = &this)
                    {
                        var span = new Span<FieldElement>(@this->_signature.data, (int)@this->_signature.data_len);
                        return span;
                    }
                }

                set
                {

                    _signature = new CArrayFieldElement();
                    _signature.data_len = (UIntPtr)value.Length;
                    fixed (FieldElement* ptr = value)
                    {
                        _signature.data = ptr;
                    }
                }
            }

            [FieldOffset(128)] // size = 32
            public FieldElement nonce;

            [FieldOffset(160)] // size = 8
            public ulong block_number;

            [FieldOffset(168)] // size = 8
            public CString transaction_type_;

            public string transaction_type
            {
                get
                {
                    return CString.ToString(transaction_type_);
                }
                set
                {
                    transaction_type_ = CString.FromString(value);
                }
            }

            [FieldOffset(176)] // size = 8
            public ulong block_timestamp;

            [FieldOffset(184)] // size = 16
            public CArrayTransactionCall _calls;

            public Span<TransactionCall> calls
            {
                get
                {
                    fixed (Transaction* @this = &this)
                    {
                        var span = new Span<TransactionCall>(@this->_calls.data, (int)@this->_calls.data_len);
                        return span;
                    }
                }

                set
                {

                    _calls = new CArrayTransactionCall();
                    _calls.data_len = (UIntPtr)value.Length;
                    fixed (TransactionCall* ptr = value)
                    {
                        _calls.data = ptr;
                    }
                }
            }

            [FieldOffset(200)] // size = 16
            public CArrayFieldElement _unique_models;

            public Span<FieldElement> unique_models
            {
                get
                {
                    fixed (Transaction* @this = &this)
                    {
                        var span = new Span<FieldElement>(@this->_unique_models.data, (int)@this->_unique_models.data_len);
                        return span;
                    }
                }

                set
                {

                    _unique_models = new CArrayFieldElement();
                    _unique_models.data_len = (UIntPtr)value.Length;
                    fixed (FieldElement* ptr = value)
                    {
                        _unique_models.data = ptr;
                    }
                }
            }

        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 96, Pack = 8)]
        public struct TransactionCall
        {
            [FieldOffset(0)] // size = 32
            public FieldElement contract_address;

            [FieldOffset(32)] // size = 8
            public CString entrypoint_;

            public string entrypoint
            {
                get
                {
                    return CString.ToString(entrypoint_);
                }
                set
                {
                    entrypoint_ = CString.FromString(value);
                }
            }

            [FieldOffset(40)] // size = 16
            public CArrayFieldElement _calldata;

            public Span<FieldElement> calldata
            {
                get
                {
                    fixed (TransactionCall* @this = &this)
                    {
                        var span = new Span<FieldElement>(@this->_calldata.data, (int)@this->_calldata.data_len);
                        return span;
                    }
                }

                set
                {

                    _calldata = new CArrayFieldElement();
                    _calldata.data_len = (UIntPtr)value.Length;
                    fixed (FieldElement* ptr = value)
                    {
                        _calldata.data = ptr;
                    }
                }
            }

            [FieldOffset(56)] // size = 4
            public CallType call_type;

            [FieldOffset(60)] // size = 32
            public FieldElement caller_address;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 112, Pack = 8)]
        public struct TransactionFilter
        {
            [FieldOffset(0)] // size = 16
            public CArrayFieldElement _transaction_hashes;

            public Span<FieldElement> transaction_hashes
            {
                get
                {
                    fixed (TransactionFilter* @this = &this)
                    {
                        var span = new Span<FieldElement>(@this->_transaction_hashes.data, (int)@this->_transaction_hashes.data_len);
                        return span;
                    }
                }

                set
                {

                    _transaction_hashes = new CArrayFieldElement();
                    _transaction_hashes.data_len = (UIntPtr)value.Length;
                    fixed (FieldElement* ptr = value)
                    {
                        _transaction_hashes.data = ptr;
                    }
                }
            }

            [FieldOffset(16)] // size = 16
            public CArrayFieldElement _caller_addresses;

            public Span<FieldElement> caller_addresses
            {
                get
                {
                    fixed (TransactionFilter* @this = &this)
                    {
                        var span = new Span<FieldElement>(@this->_caller_addresses.data, (int)@this->_caller_addresses.data_len);
                        return span;
                    }
                }

                set
                {

                    _caller_addresses = new CArrayFieldElement();
                    _caller_addresses.data_len = (UIntPtr)value.Length;
                    fixed (FieldElement* ptr = value)
                    {
                        _caller_addresses.data = ptr;
                    }
                }
            }

            [FieldOffset(32)] // size = 16
            public CArrayFieldElement _contract_addresses;

            public Span<FieldElement> contract_addresses
            {
                get
                {
                    fixed (TransactionFilter* @this = &this)
                    {
                        var span = new Span<FieldElement>(@this->_contract_addresses.data, (int)@this->_contract_addresses.data_len);
                        return span;
                    }
                }

                set
                {

                    _contract_addresses = new CArrayFieldElement();
                    _contract_addresses.data_len = (UIntPtr)value.Length;
                    fixed (FieldElement* ptr = value)
                    {
                        _contract_addresses.data = ptr;
                    }
                }
            }

            [FieldOffset(48)] // size = 16
            public CArrayc_char _entrypoints;
